--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 			content="Ping coming soon page challenge on Frontend Mentor"
 		/>
 		<!-- 9.4) Facebook open graph image -->
-		<!-- <meta
+		<meta
 			property="og:image"
-			content=""
-		/> -->
+			content="https://ping-coming-soon-page-front-end-mentor.vercel.app/design/screenshot-desktop.png"
+		/>
 		<!-- 9.5) Facebook open graph image alt -->
 		<meta
 			property="og:image:alt"
 			content="Ping coming soon page challenge"
 		/>
 		<!-- 9.6) Facebook open graph url -->
-		<!-- <meta
+		<meta
 			property="og:url"
-			content=""
-		/> -->
+			content="https://ping-coming-soon-page-front-end-mentor.vercel.app/"
+		/>
 		<!-- 10) Twitter card -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<!-- 10.1) Twitter card title -->
@@ -66,10 +66,10 @@
 		<!-- 10.3) Twitter card description user -->
 		<meta name="twitter:site" content="@Valeri79125128" />
 		<!-- 10.4) Twitter card description image -->
-		<!-- <meta
+		<meta
 			name="twitter:image"
-			content=""
-		/> -->
+			content="https://ping-coming-soon-page-front-end-mentor.vercel.app/design/screenshot-desktop.png"
+		/>
 		<!-- 10.5) Twitter card description image alt -->
 		<meta
 			property="twitter:image:alt"
